# lugiOS

./: .gitignore  AGENTS.md  ARCHITECTURE.md  README.md  package-lock.json  package.json  tailwind.config.js
docs/: SMOKE_TEST.md
registry/: registry.json
scripts/: gen-branding-path-icons.mjs  (+4 more)
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/.tauri/: lugios-signing.key.pub
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/icons/android/values/: ic_launcher_background.xml
src-tauri/permissions/autogenerated/: check_app_updates.toml  close_app.toml  get_github_repo_stats.toml  get_grant.toml  get_host_settings.toml  get_registry.toml  install_app.toml  launch_app.toml  list_installed.toml  list_running_apps.toml  lugos_audio_read_asset.toml  lugos_clipboard_read.toml  lugos_clipboard_write.toml  lugos_fetch.toml  lugos_fs_pick_read.toml  lugos_fs_save_dialog.toml  lugos_notification_send.toml  preview_app_manifest.toml  refresh_registry.toml  set_host_registry_url.toml  storage_delete.toml  storage_get.toml  storage_set.toml  uninstall_app.toml  upgrade_app.toml
src-tauri/resources/: bridge.iife.js
src-tauri/src/: commands.rs  error.rs  github.rs  lib.rs  main.rs  util.rs
src-tauri/src/host_settings/: mod.rs
src-tauri/src/installer/: downloader.rs  extractor.rs  mod.rs
src-tauri/src/permissions/: capability.rs  mod.rs  types.rs
src-tauri/src/registry/: fetcher.rs  mod.rs  types.rs
src-tauri/src/runtime/: bridge.rs  mod.rs  window_manager.rs
src-tauri/src/storage/: mod.rs
src-tauri/src/updater/: mod.rs
(+37 files in other folders)
