[package]
name = "lugios"
version = "0.1.0"
description = "LugiOS — desktop app runtime and marketplace"
repository = "https://github.com/hocestnonsatis/lugiOS"
authors = ["you"]
edition = "2021"

[lib]
name = "lugios_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Extra crates below Task 01: tauri-plugin-dialog (OS pickers), arboard (clipboard IPC), rusqlite (app KV without exposing SQL plugin to mini-apps)
tauri = { version = "2", features = [] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
arboard = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
flate2 = "1"
tar = "0.4"
zip = "2"
futures-util = "0.3"
# App-scoped KV via SQLite files under app_data_dir; avoids exposing plugin SQL IPC to mini-apps
rusqlite = { version = "0.32", features = ["bundled"] }
